# Hack-Nation25

./: .gitignore  COMPLETE_E2E_ENCRYPTED_FLOW_GUIDE.md  E2E_INTEGRATION_TEST_GUIDE.md  Makefile  README.md  docker-compose.yml  test_api_startup.py
.github/workflows/: ci.yml
docs/: architecture.md  implementation.md  log_collector.md  tech_stack.md  usp.md  workflows.md
src/client/: Dockerfile  README.md
src/client/config/: collector.yaml  mcp_client.yaml  permissions.yaml
src/client/go/: go.mod
src/client/go/cmd/collector/: main.go
src/client/go/internal/collector/: collector.go
src/client/go/internal/config/: config.go
src/client/go/internal/encryption/: encryptor.go
src/client/go/internal/exporter/: cloud_exporter.go
src/client/rust/: Cargo.toml  config.yaml  mcp_config.yaml
src/client/rust/examples/config_examples/: collector.yaml  exporters.yaml
src/client/rust/src/: collector_main.rs  config.rs  crypto.rs  db.rs  main.rs  mcp.rs
src/client/rust/src/collector/: config.rs  exporters.rs  mod.rs  pipeline.rs  processors.rs  sources.rs
src/cloud/: .env.example  Dockerfile  README.md  requirements-dev.txt  requirements.txt
src/cloud/api/: config.py  db.py  main.py
src/cloud/api/models/: __init__.py  encryption.py  log.py  logs.py  mcp.py  user.py
src/cloud/api/routers/: auth.py  logs.py  mcp.py  vector_db.py
src/cloud/api/services/: __init__.py  encryption.py  log_processor.py  mcp_service.py  vector_store.py
src/cloud/api/utils/: telemetry.py
