[package]
name = "lognarrator-client"
version = "0.1.0"
edition = "2021"
authors = ["LogNarrator Team"]
description = "Secure log collection and analysis client"
default-run = "log_collector"

[[bin]]
name = "mcp_client"
path = "src/main.rs"

[[bin]]
name = "log_collector"
path = "src/collector_main.rs"

[dependencies]
# Cryptography
sodiumoxide = "0.2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11"

# Database
rusqlite = { version = "0.28", features = ["bundled"] }

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# Logging & Configuration
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.2", features = ["derive"] }
config = "0.13"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
base64 = "0.21"

# Testing
mockall = "0.11"

# Log Collection
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.8"
hostname = "0.3"
futures = "0.3"
bytesize = "1.2"

# Journald support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "1.0"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tempfile = "3.3"
mockito = "1.0"
